--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "14.1.0",
     "next-nprogress-bar": "^2.1.2",
     "react": "^18",
+    "react-calendar": "^4.8.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18",
     "sharp": "^0.33.2"
   },
@@ -22,6 +24,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^4.19.6",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
