--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.3.1",
     "bcryptjs": "^2.4.3",
-<<<<<<< HEAD
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.1",
@@ -22,8 +21,7 @@
     "react-calendar": "^4.8.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18",
-    "sharp": "^0.33.2"
-=======
+    "sharp": "^0.33.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
@@ -34,7 +32,6 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "sharp": "^0.33.4"
->>>>>>> 13f79ab (updated packages)
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
